--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: The Archive of Frank Westermann
+title: CollectionBuilder-GH 
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: The lifestory of a normal man 
+tagline: a template for creating simple digital exhibits
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "CollectionBuilder-GH is a template for creating small digital collection exhibits on GitHub Pages designed for teaching digital library skills"
@@ -34,7 +34,7 @@ author: CollectionBuilder
 #
 # Set the metadata for your collection (the name of the csv file in your _data directory that describes the objects in your collection) 
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
-metadata: psychiana_cbdemo.gh
+metadata: psychiana_cbdemcbdemo_gh
 
 ##########
 # Site/Organization Branding 
